--- a/assets/sass/objects/_subscribe.scss
+++ b/assets/sass/objects/_subscribe.scss
@@ -5,5 +5,5 @@
   position: relative; }
 
 .subscribe-image {
-  @include breakpoint($b-max) {
+  @include breakpoint($d-max) {
     display: none; } }
